changed gitignore and other things (#2)
